immich-ton/immich-ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-tailscale
  namespace: immich
spec:
  selector:
    app.kubernetes.io/instance: immich-release
    app.kubernetes.io/name: server
  ports:
  - protocol: TCP
    port: 2283
    targetPort: 2283
  type: ClusterIP
