immich-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: immich
  namespace: immich
spec:
  hosts:
    - immich.lag0.com.br
    - immich-ts.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: immich-release-server
            port:
              number: 2283
